--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ label {
     margin-top: 15px;
     margin-bottom: 5px;
     font-weight: bold;
-    text-align: left; /* Гарантируем, что все заголовки выровнены по левому краю */
+    /* ФИНАЛЬНОЕ ИСПРАВЛЕНИЕ: Принудительное выравнивание текста заголовков по левому краю */
+    text-align: left !important; 
 }
 
 input[type="text"],
@@ -263,7 +264,6 @@ select#font-select option[value*="Playfair"] {
     #card-form {
         display: flex;
         flex-wrap: wrap;
-        /* Сохраняем flex-свойства для мобильных, но text-align: left уже установлен выше */
     }
     
     #reset-form {
